[gd_scene load_steps=15 format=3 uid="uid://daqf0l4ldhyk3"]

[ext_resource type="Script" path="res://player.gd" id="1_xknsx"]
[ext_resource type="Resource" uid="uid://c0hegwvq86b1k" path="res://DefaultMovementData.tres" id="2_0l8ta"]
[ext_resource type="Texture2D" uid="uid://bohmjmjnltllq" path="res://player.png" id="2_2yn7x"]
[ext_resource type="Texture2D" uid="uid://bpbg53qcox43f" path="res://character files/Walk-Sheet-Sheet.png" id="3_asw0y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m8fh6"]
atlas = ExtResource("2_2yn7x")
region = Rect2(120, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3we3"]
atlas = ExtResource("3_asw0y")
region = Rect2(0, 0, 32, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_qglm5"]
atlas = ExtResource("3_asw0y")
region = Rect2(160, 0, 32, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfsnr"]
atlas = ExtResource("3_asw0y")
region = Rect2(32, 0, 32, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvaun"]
atlas = ExtResource("3_asw0y")
region = Rect2(64, 0, 32, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxdri"]
atlas = ExtResource("3_asw0y")
region = Rect2(96, 0, 32, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_k853q"]
atlas = ExtResource("3_asw0y")
region = Rect2(128, 0, 32, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ne1q"]
atlas = ExtResource("3_asw0y")
region = Rect2(0, 0, 32, 99)

[sub_resource type="SpriteFrames" id="SpriteFrames_cen0d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8fh6")
}],
"loop": true,
"name": &"duck",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3we3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qglm5")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfsnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvaun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxdri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k853q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ne1q")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sleqb"]
size = Vector2(28, 26.6667)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
floor_constant_speed = true
floor_snap_length = 3.0
safe_margin = 0.1
script = ExtResource("1_xknsx")
movement_data = ExtResource("2_0l8ta")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -6.93557)
scale = Vector2(0.75, 0.900265)
sprite_frames = SubResource("SpriteFrames_cen0d")
animation = &"duck"
offset = Vector2(0, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -11)
scale = Vector2(0.5, 0.75)
shape = SubResource("RectangleShape2D_sleqb")

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.001

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2.08165e-12, -32)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="HazardDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[connection signal="area_entered" from="HazardDetector" to="." method="_on_hazard_detector_area_entered"]
